--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body{
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color:rgb(231, 247, 228);
     padding-left:200px;
     padding-right:200px;
@@ -13,7 +13,7 @@ h1{
 }
 
 h2{
-    font-size: 20px;
+    font-size: 25px;
     text-align: left;
     line-height:1.3;
 }
@@ -25,8 +25,8 @@ p{
 }
 
 h3{
-    font-size: 15px;
-    text-align: justify;
+    font-size: 20px;
+    text-align: center;
 }
 
 h4{
